added login page

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,29 @@
-<div class="jumbotron text-center">
-	<h1>Home Page 4 Life</h1>
-
-	<p>{{ mainCtrl.tagline }}</p>
+<div class="conteiner">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12">
+			<nav class="navbar navbar-inverse  navbar-fixed-top">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/">MEAN</a>
+				</div>
+				<ul class="nav navbar-nav">
+            		<li><a ui-sref="home">Home</a></li>
+					<li><a ui-sref="nerds">Nerds</a></li>
+					<li><a ui-sref="geeks">Geeks</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/"><i class="glyphicon glyphicon-log-out"></i> Logout</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12 col-sm-12">
+			<div class="jumbotron text-center">
+				<h1>Main page</h1>
+				<p>{{mainCtrl.tagline }}</p>
+			</div>
+		</div>
+	</div>
 </div>
