--- a/public/views/nerd.html
+++ b/public/views/nerd.html
@@ -1,5 +1,27 @@
-<div class="jumbotron text-center">
-	<h1>Nerds and Proud</h1>
-
-	<p>{{ nerdCtrl.tagline }}</p>
+<div class="conteiner-fluid">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12">
+			<nav class="navbar navbar-inverse  navbar-fixed-top">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/">MEAN</a>
+				</div>
+				<ul class="nav navbar-nav">
+            		<li><a ui-sref="home">Home</a></li>
+					<li><a ui-sref="nerds">Nerds</a></li>
+					<li><a ui-sref="geeks">Geeks</a></li>
+				</ul>
+				<button class="btn btn-default navbar-btn navbar-right"> <i class="glyphicon glyphicon-log-out"></i> Logout</button>
+			</nav>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12 col-sm-12">
+			<div class="jumbotron text-center">
+				<h1>Nerds and Proud</h1>
+				<p>{{ nerdCtrl.tagline }}</p>
+			</div>
+		</div>
+	</div>
 </div>
