--- a/public/views/geek.html
+++ b/public/views/geek.html
@@ -1,27 +1,38 @@
-<div class="conteiner-fluid">
-	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12">
-			<nav class="navbar navbar-inverse  navbar-fixed-top">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="/">MEAN</a>
-				</div>
-				<ul class="nav navbar-nav">
-            		<li><a ui-sref="home">Home</a></li>
-					<li><a ui-sref="nerds">Nerds</a></li>
-					<li><a ui-sref="geeks">Geeks</a></li>
-				</ul>
-				<button class="btn btn-default navbar-btn navbar-right"> <i class="glyphicon glyphicon-log-out"></i> Logout</button>
-			</nav>
+<div class="row">
+	<div class="navbar-header">
+		<a class="navbar-brand" href="/">MEAN</a>
+		<div class="navbar-header_nav-btn">
+			<ul>
+				<li>
+					<a href="#"><i class="material-icons">notifications_none</i></a>
+				</li>
+				<li>
+					<a href="#"><i class="material-icons">whatshot</i></a>
+				</li>
+				<li>
+					<a href=""><i class="material-icons">exit_to_app</i> </a>
+				</li>
+			</ul>
+
 		</div>
 	</div>
 </div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12 col-sm-12">
-			<div class="jumbotron text-center">
-				<h1>Geek page</h1>
-				<p>{{geekCtrl.tagline }}</p>
-			</div>
+<div class="row row-content">
+	<div class="sidebar">
+		<ul class="nav navbar-nav">
+			<li><a ui-sref="home">Home</a></li>
+			<li><a ui-sref="nerds">Nerds</a></li>
+			<li><a ui-sref="geeks">Geeks</a></li>
+		</ul>
+
+	</div>
+
+	<div class="content">
+		<div class="card card-full">
+			<h1>Geek page</h1>
+			<p>{{geekCtrl.tagline }}</p>
 		</div>
 	</div>
+
+</div>
 </div>
