--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,10 +4,10 @@
 		<div class="navbar-header_nav-btn">
 			<ul>
 				<li>
-					<a href="#"><i class="material-icons">notifications_none</i></a>
+					<a href="#"><i class="material-icons notif">notifications_none</i></a>
 				</li>
 				<li>
-					<a href="#"><i class="material-icons">whatshot</i></a>
+					<a href="#"><i class="material-icons hot">whatshot</i></a>
 				</li>
 				<li>
 					<a href=""><i class="material-icons">exit_to_app</i> </a>
@@ -21,19 +21,17 @@
 	<div class="sidebar">
 		<ul class="nav navbar-nav">
 			<li><a ui-sref="home">Home</a></li>
-			<li><a ui-sref="nerds">Nerds</a></li>
-			<li><a ui-sref="geeks">Geeks</a></li>
+			<li><a ui-sref="profile">Profile</a></li>
+			<li><a ui-sref="settings">Settings</a></li>
 		</ul>
 	</div>
 
 	<div class="content">
 		<div class="card">
-			<h1>Main page</h1>
-			<p>{{mainCtrl.tagline }}</p>
+			<h1>{{mainCtrl.tagline }}</h1>
 		</div>
 		<div class="card">
-			<h1>Main page</h1>
-			<p>{{mainCtrl.tagline }}</p>
+			<h1>{{mainCtrl.tagline }}</h1>
 		</div>
 	</div>
 
