--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,6 +164,10 @@ ul li {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+.registration {
+    height: 350px;
+}
+
 .form-group label {
     display: block
 }
